objects/Case.object
<CustomObject>
    <fields>
        <fullName>Zendesk__Resolution_Time__c</fullName>
        <label>Resolution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Solved_At__c</fullName>
        <label>Solved At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Updated_At__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Ticket_ID__c</fullName>
        <label>Zendesk Ticket ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>BBB_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BBB</label>
        <queue>BBB</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bulk_Project_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Bulk Project</label>
        <queue>Bulk_Project</queue>
    </listViews>
    <listViews>
        <fullName>Bulk_Projects</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Bulk_Project</value>
        </filters>
        <label>Bulk Projects</label>
    </listViews>
    <listViews>
        <fullName>DAM_Queue_Case</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Days_Delinquent__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Company_Key__c</columns>
        <columns>Account_Owner__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Delinquent_Accounts</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>created in error</value>
        </filters>
        <label>DAM Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Delinquent_Cases_Created</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>Company_Key__c</columns>
        <columns>Days_Delinquent__c</columns>
        <columns>Current_Amount_Due__c</columns>
        <columns>Sub_Key__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Account_Phone__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Delinquent_Accounts</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>9/12/2015 12:00 AM</value>
        </filters>
        <label>All Delinquent Cases</label>
        <sharedTo>
            <group>Admins_Ops</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>General_Support_Case</fullName>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Company_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.General_Support</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>General Support</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Home_Assistant_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Home_Management</value>
        </filters>
        <label>Home Assistant Cases</label>
    </listViews>
    <listViews>
        <fullName>IT_Support_Case_All_Open</fullName>
        <columns>OWNER_NAME</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.IT_Support</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <label>IT Support All Open</label>
        <sharedTo>
            <group>Admins_Ops</group>
            <group>IT_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>License_Requests_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>License Requests</label>
        <queue>License_Requests</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mis_Sold_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Mis-Sold</label>
        <queue>Mis_Sold</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.SUBJECT</columns>
        <columns>Last_Activity__c</columns>
        <columns>Zendesk__Updated_At__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>SPAM_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>SPAM</label>
        <queue>SPAM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tier_1_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Tier 1</label>
        <queue>Tier_1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Account_Management_General</fullName>
        <active>true</active>
        <businessProcess>Account Management</businessProcess>
        <description>General Account Management Cases</description>
        <label>Account Management - General</label>
    </recordTypes>
    <recordTypes>
        <fullName>BBB</fullName>
        <active>true</active>
        <businessProcess>BBB</businessProcess>
        <description>Better Business Bureau</description>
        <label>BBB</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bulk_Project</fullName>
        <active>true</active>
        <businessProcess>Bulk Project</businessProcess>
        <description>Created to handle bulk uploads of projects for pros</description>
        <label>Bulk Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cancellation_Request</fullName>
        <active>true</active>
        <businessProcess>Cancellation Request</businessProcess>
        <description>Requests for Cancellations</description>
        <label>Cancellation Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contractor_Validation</fullName>
        <active>true</active>
        <businessProcess>Contractor Validation</businessProcess>
        <description>Used to track licensing, background checks and other eligibility information for Bank and Insurance Partnerships</description>
        <label>Contractor Validation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Delinquent_Accounts</fullName>
        <active>true</active>
        <businessProcess>Cancellation Request</businessProcess>
        <label>Delinquent Accounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Support</fullName>
        <active>true</active>
        <businessProcess>General Support</businessProcess>
        <description>General Support Cases</description>
        <label>General Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Management</fullName>
        <active>true</active>
        <businessProcess>Home Management</businessProcess>
        <description>Home Management Team to use for incoming issues/emails</description>
        <label>Home Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Support</fullName>
        <active>true</active>
        <businessProcess>IT Support</businessProcess>
        <description>Created for General IT Tickets</description>
        <label>IT Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>License_Request</fullName>
        <active>true</active>
        <businessProcess>License Request</businessProcess>
        <description>Created for License Verification</description>
        <label>License Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mis_sold</fullName>
        <active>true</active>
        <businessProcess>Mis-Sold</businessProcess>
        <description>Mis-sold Accounts</description>
        <label>Mis-sold</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Support</fullName>
        <active>true</active>
        <businessProcess>Salesforce Support</businessProcess>
        <label>Salesforce Support</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Delilnquent_Cases</fullName>
        <active>true</active>
        <errorConditionFormula>Account.Last_Delinquent_Case__c - TODAY() &lt; 30</errorConditionFormula>
        <errorMessage>Last Delinquent Case was less than 30 days ago please refer to the case history for more details.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Detail_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
ISPICKVAL(  Type ,&quot;Other&quot;), 
ISBLANK(  Other_Detail__c ), 
NOT( 
OR(($Profile.Id = &quot;00ej0000000uw9O&quot;), /*System Administrator*/ 
($Profile.Id = &quot;00ej00000016bYW&quot;) /*System Administrator No Password*/ 
) 
))</errorConditionFormula>
        <errorDisplayField>Other_Detail__c</errorDisplayField>
        <errorMessage>Other Alert! You&apos;ve picked the uber-descriptive &quot;Other&quot; as an outcome for this account. Let us know what you mean by that!</errorMessage>
    </validationRules>
</CustomObject>